force-app/main/default/objects/MUSW__Animal__c/fields/License_No__c.field-meta.xml
<CustomField>
    <fullName>License_No__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Tag or Pet ID.</inlineHelpText>
    <label>License No.</label>
    <length>12</length>
    <type>Text</type>
</CustomField>