force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Age__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Age__c</fullName>
    <label>Age (at last incident)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>