force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Age_Calc__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Age_Calc__c</fullName>
    <formula>(TODAY() - MUSW__Date_of_Birth__c) /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Age as determined by Date of Birth to Today</inlineHelpText>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>