force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Breed__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Breed__c</fullName>
    <label>Breed</label>
    <length>40</length>
    <type>Text</type>
</CustomField>