force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Color__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Color__c</fullName>
    <label>Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>