force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Microchip_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Microchip_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>AVID - 9 digits XXX*XXX*XXX
ISO - 10 digits
ISO-EU - 15 digits</inlineHelpText>
    <label>Microchip No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>