force-app/main/default/objects/MUSW__Animal__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Breed__c</columns>
    <columns>MUSW__Age_Calc__c</columns>
    <columns>MUSW__Description__c</columns>
    <columns>MUSW__Gender__c</columns>
    <columns>MUSW__Primary_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>